--- a/style_index.css
+++ b/style_index.css
@@ -1,12 +1,7 @@
-html{
-	
-}
-	
 body {
-	background-image: url(images/fond.jpeg);
+	background-image: url("images/fond.jpeg");
 	background-repeat: no-repeat;
-	background-size: auto,auto;
-	
+	background-size: auto,auto;	
 }
 
 
