--- a/style_index.css
+++ b/style_index.css
@@ -1,7 +1,7 @@
 body {
 	background-image: url("images/fond.jpeg");
 	background-repeat: no-repeat;
-	background-size: auto,auto;	
+	background-size: auto,100%;	
 }
 
 
@@ -127,10 +127,12 @@ ul li a:active{
     box-shadow: 0 0 2px rgba(0,0,0,.3) inset;
 }
 footer{
-	margin-left:60%;
+	margin-left:70%;
+	margin-right: auto;
+	margin-top: 20%;
 	width:30%;
 	bottom:3%;
-	position: absolute;
+	position: relative;
 }
 
 .clear{
