--- a/style_index.css
+++ b/style_index.css
@@ -203,7 +203,7 @@ footer{
 @media only screen and (max-device-width: 480px) {
    body { 
     background: url("images/fond.jpeg"); 
-    background-repeat: no-repat;
+    background-repeat: no-repeat;
     background-size: auto,auto;
     
   }
