--- a/style_index.css
+++ b/style_index.css
@@ -201,11 +201,16 @@ footer{
 
   /*define mobile specific styles come here */
 @media only screen and (max-device-width: 480px) {
-   body { 
-    background: url("images/fond.jpeg"); 
+	html{
+	    background: url("images/fond.jpeg"); 
     background-repeat: no-repeat;
     width:400px;
     height:600px;
+	
+	}
+	
+   body { 
+
     
   }
 }
