--- a/style_index.css
+++ b/style_index.css
@@ -3,7 +3,7 @@ body {
 	background-repeat: no-repeat;
 
 	
-	 background-size: cover;
+	 background-size:auto, auto;
     background-attachment: fixed;
     background-position: center center;
 	
