--- a/style_index.css
+++ b/style_index.css
@@ -17,11 +17,11 @@ body {
 	
 	@media only screen and (max-device-width: 480px) {
 		body{
-	        background-attachment: scroll;	        
+	               
 		}
 		.main{
-		margin-left: auto;
-		margin-right: auto;
+		/*margin-left: auto;
+		margin-right: auto;/
 		}
 		
     }
