--- a/style_index.css
+++ b/style_index.css
@@ -17,7 +17,7 @@ body {
 	
 	@media only screen and (max-device-width: 480px) {
 		body{
-	               
+	           background-attachment: scroll;	     
 		}
 		.main{
 		/*margin-left: auto;
