--- a/style_index.css
+++ b/style_index.css
@@ -9,14 +9,9 @@ body {
 
 	
 	 background-size:auto, auto;
-    background-attachment: fixed;
-    background-position: center center;
     
     border:solid;
 }
-
-
-
 
 .main{
 	margin-left: auto;
@@ -37,8 +32,6 @@ body {
 	line-height: 1em;
 	
 	color:  white;
-	
-	/*target="_blank*/
 	
 }
 
@@ -162,6 +155,8 @@ footer{
     -o-animation: fadein 4s; /* Opera */
     
 	 opacity: 0.7;
+	 filter: alpha(opacity=40); /* For IE8 and earlier */
+	 
 }
 
 .icons:hover,
