--- a/style_index.css
+++ b/style_index.css
@@ -19,9 +19,7 @@ body {
 		body{
 	           background-attachment: scroll;	     
 		}	
-		.menuliste{
-		width:200px;
-		}
+		
     }
 
 
@@ -74,7 +72,7 @@ margin-right: auto;
 
 .menuliste{
 	display: table;
-    width: 500px;
+    width: 50%;
     margin: 1% auto;
     padding: 0;
 	
