--- a/style_index.css
+++ b/style_index.css
@@ -20,8 +20,7 @@ body {
 	           background-attachment: scroll;	     
 		}	
 		.menuliste{
-		overflow-x: auto;
-		display: block;
+		width:10%;
 		}
 		
 		
@@ -68,6 +67,7 @@ body {
 
 .menuliste{
 	display: table;
+	width:50%;
     margin: 1% auto;
     padding: 0;
 	
