--- a/style_index.css
+++ b/style_index.css
@@ -23,6 +23,10 @@ body {
 		width:10%;
 		}
 		
+		.clear{
+			width:10%;
+		}
+		
 		
     }
 
@@ -146,9 +150,7 @@ footer{
 	width:5%;
 }
 
-#place_icons{
-
-	
+#place_icons{	
 	display: flex;
     justify-content: center; 
 		
@@ -209,26 +211,6 @@ footer{
     to {
         opacity: 0.7;
     }
-}
-
-
-@media only screen and (max-device-width: 480px) {
-     body {
-         
-     }
-    .container {
-          padding: 0px 10px 5px 10px !important;
-     }
-     .header {
-          font-size: 16px !important;
-     }
-     .headline {
-          font-size: 20px !important;
-     }
-     #screenshot_image {
-          width: 275px;
-          height: 190px;
-     }
 }
 
 
