--- a/style_resume.css
+++ b/style_resume.css
@@ -1,26 +1,32 @@
-html, body {
-
-background-color: #879eff;	
-margin-right:5%;
-margin-left:5%;	
-margin-top: 5%;
+html{
+	margin: 0;
+	paddin : 0;
+	background-color: #879eff;
+	
+	
 }
 
 body{
+	background-image: url("images/fond.jpeg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	height:100%;
+	width:100%;
+	padding:10%;
 	
+}
+
+.body{
+	padding: 1%; 
+	border:solid;
+	
+	background-color: #ffffff;
+	
+
 	border-radius:50px;
+	
 }
 
-/*background = header + about + content*/
-#background{
-/*border: 1px solid black;*/
-background-color: #ffffff;
-margin-bottom: 5%;
-padding: 1%; 
-
-border-radius:50px;
-            
-}
 
 
 /*Header + Contacts*/
@@ -54,8 +60,6 @@ font-weight: 800;
 margin:2%;
 }
 
-.contacts{
-}
 
 .contact span{
 	margin-right:3%;	
@@ -71,18 +75,17 @@ margin:2%;
 	/*border: 1px solid black;*/
 }
 
-/*All content in body except about and header*/
-.content{
-	display: flex;
-    justify-content: center;
-    	
-}
 
-/*Section left*/
-.left{
-    width: 55%;	
-    padding: 1%;
-    /*border: 1px solid black;*/
+aside{
+	width: 95%;	
+	margin-left:auto;
+	margin-right:auto;
+	clear:both;
+	margin-bottom:5%;
+	
+	padding: 1%;
+	
+	
 }
 
 .type_value{
@@ -155,14 +158,6 @@ font-weight: 900;
 .description{
 	font-style: oblique;
 	
-}
-
-/*Section right*/
-.right{
-	width: 40%;
-	margin-left:5%;
-	padding: 1%;
-	/*border: 1px solid black;	*/
 }
 
 ul h3
@@ -282,14 +277,5 @@ font-weight: 600;
 	
 }
 
-aside{
-	clear: both;
-margin-bottom: 10%;
-	
 
-	}
 
-il{
-	/*border: 1px solid black;*/
-	
-}
