--- a/style_index.css
+++ b/style_index.css
@@ -1,6 +1,8 @@
 body {
 	background-image: url("images/fond.jpeg");
 	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size:cover;
 	  
 	
 }
