--- a/style_index.css
+++ b/style_index.css
@@ -1,6 +1,7 @@
 body {
 	background-image: url("images/fond.jpeg");
-	background-repeat: no-repeat;
+	background-repeat: repeat-no;
+	background-attachment: fixed;
 	background-size:cover;
 	  
 	
