--- a/style_index.css
+++ b/style_index.css
@@ -1,5 +1,8 @@
 body {
-	
+	background-image: url("images/fond.jpeg");
+	background-repeat: repeat-no;
+	background-attachment: fixed;
+	background-size:cover;	
 }
 
 .body{
