--- a/style_resume.css
+++ b/style_resume.css
@@ -24,6 +24,8 @@ body{
 	border:solid;	
 	background-color: #ffffff;
 	border-radius:50px;
+	
+	opacity:0.9;
 
 	
 	
@@ -72,7 +74,15 @@ margin:2%;
 	  -ms-hyphens: auto;
 	  -o-hyphens: auto;
 	  hyphens: auto;
+	font-size: 1.2em;
+}
+.bloc h3{
 	font-size: 1.3em;
+	font-weight: 600;
+	border-bottom: solid #bfbfbf 0.1px;
+	padding-bottom:7px;
+	
+	
 }
 
 .bloc p{
@@ -199,7 +209,8 @@ ul h3
   	background: #ccc;
   	height: 20px;
   	border-radius: 3px;
-  	margin-top: 10%;
+  	margin-top: 5%;
+  	width:70%;
 }
 .bars li em {
 	font: 15px 'opensans-bold', sans-serif;
@@ -304,6 +315,10 @@ font-weight: 600;
 	 aside.bars{
 	 padding:2%;
 	 }
+	 .bars li {
+	 width:80%;
+	 margin-top:25px;}
+	 
 	 	 
 	 #id{
 	diplay:block; 
@@ -355,12 +370,15 @@ font-weight: 600;
 	width:30%;	
 	}
 	.bloc p{
-	font-size: 0.8em;
+	font-size: 0.9em;
 	}
+	.bloc h3{
+	font-size: 1em;
+	}
+	
 	.coord{
-	margin-left:auto;
-	margin-right:auto;
-	width:70%;}
+	margin-top:5%;
+	width:100%;}
 	.bloc{
 	width:100%;
 	}
