--- a/menu.css
+++ b/menu.css
@@ -3,8 +3,10 @@
 
 .menuliste{
 	display: table;
-	width:50%;
-    margin: 1% auto;
+	width:60%;
+	margin-left:auto;
+	margin-right:auto;
+	paddin:0;
     padding: 0;
 	
 	background: -webkit-linear-gradient(deepskyblue, dodgerblue);
@@ -20,6 +22,11 @@
                 0 5px 10px rgba(0, 0, 0, .2),
                 0 20px 20px rgba(0, 0, 0, .15);
 	
+}
+
+.menuliste li span{
+	color: #ffffff;
+	font-:500;
 }
 
 .menuliste li{
@@ -53,7 +60,8 @@ ul li:last-child a{
 
 ul li a:hover, 
 ul li a:focus{
-	
+	color: #ffffff;
+	font-weight:400;
 	transition: all .3s 0s;
 	padding: 8px 25px 17px 25px;
     background: rgba(255,255,255,.2);
