--- a/style_index.css
+++ b/style_index.css
@@ -1,10 +1,12 @@
-.body{
-	height:100%;
+body{
 	background-image: url("images/fond.jpeg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-size:cover;	
-	
+	background-size:cover;		
+}
+
+.body{
+	height:100%;	
 }
 
 .menulist{
