--- a/style_index.css
+++ b/style_index.css
@@ -1,8 +1,8 @@
-body{
+html{
 	background-image: url("images/fond.jpeg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-size:cover;		
+	background-size:cover;
 }
 
 .body{
