--- a/style_index.css
+++ b/style_index.css
@@ -2,8 +2,13 @@ html{
 	background-image: url("images/fond.jpeg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-size: 100%, auto;
-	min-height: 100%;
+	
+	 
+    -webkit-background-size: cover; 
+    -moz-background-size: cover; 
+    -o-background-size: cover; 
+    background-size: cover;
+	
 }
 
 .body{
