--- a/style_index.css
+++ b/style_index.css
@@ -1,17 +1,9 @@
 html{
 	background-image: url("images/fond.jpeg");
+	background-attachment: fixed;
 	background-repeat: no-repeat;
+	background-size:cover;
 	
-	 
-    -webkit-background-size: cover; 
-    -moz-background-size: cover; 
-    -o-background-size: cover; 
-    background-size: cover;
-	
-}
-
-.body{
-	height:100%;	
 }
 
 .menulist{
