--- a/style_index.css
+++ b/style_index.css
@@ -2,9 +2,23 @@ html{
 	background-image: url("images/fond.jpeg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-size:cover;
+	
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    
+     height:100%;
+ 	min-height:100%;
 	
 }
+
+body{
+ 	min-height:100%;
+	
+	
+}
+
 
 .menulist{
 	width:50%;
