--- a/style_resume.css
+++ b/style_resume.css
@@ -1,23 +1,22 @@
-html{
-
-}
-
 body{
 	background-image: url("images/fond.jpeg");
-    background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-size: cover;
-	min-height: 100%;
+	background-repeat: no-repeat;
+	
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    
+     height:100%;
+ 	min-height:100%;
 	
 	
 	padding-top:1%;
 	padding-bottom:5%;
 	padding-left:15%;
 	padding-right:15%;
-	
-	
-	
-	
+
 }
 
 .body{
