--- a/menu.css
+++ b/menu.css
@@ -1,4 +1,4 @@
-/* Idea from */
+/* Idea not from me, find on the internet.*/
 
 
 .menuliste{
@@ -26,7 +26,7 @@
 
 .menuliste li span{
 	color: #ffffff;
-	font-:500;
+	font-weight:400;
 }
 
 .menuliste li{
@@ -73,7 +73,7 @@
                 0 -5px 0 hsl(210, 100%, 70%) inset; 
 } 
 
-ul li a:active{
+.menuliste li a:active{
     background: linear-gradient(rgba(0,0,0,.2),rgba(0,0,0,.1)); 
     box-shadow: 0 0 2px rgba(0,0,0,.3) inset;
 }
