--- a/style.css
+++ b/style.css
@@ -18,10 +18,19 @@ body{
  	min-height:100%;
  	
  	
-	padding-top:1%;
+	
 	padding-bottom:5%;
 	padding-left:15%;
 	padding-right:15%;
+	
+	/*Bootstrap*/
+	font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size:14px;
+	line-height:1.42857143;
+	color:#333;
+	
+	text-decoration: none;
+	list-style-type : none;	
 
 }
 
@@ -41,7 +50,8 @@ body{
 #id{
 	margin-top:3%;
 	paddin:5%; 
-	font-weight: 600;
+	font-weight: 200;
+	font-size:1.2em;
 	letter-spacing: 0.4em;
 	margin-left: auto;
     margin-right: auto;
@@ -54,7 +64,7 @@ body{
 #id img{
 	margin-left: auto;
     margin-right: auto;
-    width:20%;
+    width:40%;
     display: block;
 }
 
@@ -135,19 +145,19 @@ margin:2%;
 
 
 /*About : coord*/
-/*
-.coord{
-	float:right;
-	width:30%;	
-	
-	font-size: 1em;
 
-}
 .coord ul{
 	padding-left: 0;
-	list-style-type : none;
+
 }
-*/
+
+.coord ul a{
+	text-decoration: none;
+	list-style-type : none;
+	color: #333;	
+}
+
+
 
 
 aside{
@@ -183,13 +193,12 @@ ul{
 	
 }
 
-.type_value .education{
+.education{
 	color: #000000;
 	width: 80%;	
 	
-	padding: 5%; 
-	
-    background: #e8e8e8;
+	padding:3%;	
+    background: #e9e4e4;
 	/*border: 1px solid black;*/
 }
 
@@ -432,9 +441,11 @@ font-weight: 600;
 }
 
 @media screen and (max-width: 1000px){
-	/*Resume*/
-	 body{
-	 padding:1%;
+	
+	 body{	
+	padding-bottom:5%;
+	padding-left:1%;
+	padding-right:1%;
 	 }
 	 
 	 aside.bars{
@@ -492,6 +503,9 @@ font-weight: 600;
 	}
 	.bloc p{
 	font-size: 0.9em;
+	width:90%;
+	margin-left: auto;
+    margin-right: auto;
 	}
 	.bloc h3{
 	font-size: 1em;
@@ -517,6 +531,10 @@ font-weight: 600;
 	.subsection h3{
 	font-size:1em;
 	text-align:center;
+	}
+	
+	#bot{
+	padding:3%;
 	}
 	
 	
