--- a/style_index.css
+++ b/style_index.css
@@ -13,6 +13,15 @@ html{
 	
 }
 
+body{
+	
+	/*Bootstrap*/
+	font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size:14px;
+	line-height:1.42857143;
+	color:#333;
+}
+
 .menulist{
 	width:50%;
 }
